[metadata]
name = rutestresults
version = 0.0.1
author = Vera Ilina
author_email = vilina.develop@gmail.com
description = Examples of python code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/verailina/rutestresults
project_urls =
    Bug Tracker = https://github.com/verailina/rutestresults/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = rutestresults
python_requires = >=3.6
include_package_data = True

install_requires =
    pandas
    openpyxl

[options.entry_points]
console_scripts =
    show-test-results = rutestresults.__main__:visualize
    load-test-results = rutestresults.__main__:load_data

